<resources>
    <string name="app_name">Fanorona Akalana</string>

    <!-- Home -->
    <string name="home_play">Nouvelle partie</string>
    <string name="home_edit">Editer</string>
    <string name="home_save">Sauvegarde</string>
    <string name="home_setting">Paramètre</string>
    <string name="home_about">A propos</string>

    <!-- Opions -->
    <string name="game_option_mode">Mode du jeu</string>
    <string name="game_option_against">Jouer contre</string>
    <string name="game_option_move_first">Premier</string>
    <string name="game_option_ai_level">Niveau de l\'IA</string>
    <string name="game_option_ai_max_time_eval">Temps max</string>
    <string name="game_option_ai_ponder">Ponder</string>

    <!-- Opion mode -->
    <string name="game_option_mode_riatra">Riatra</string>
    <string name="game_option_mode_vela_black">Vela [Noir]</string>
    <string name="game_option_mode_vela_white">Vela [Blanc]</string>

    <!-- Opion against -->
    <string name="game_option_against_human">Humain</string>
    <string name="game_option_against_ai_black">IA [Noir]</string>
    <string name="game_option_against_ai_white">IA [Blanc]</string>

    <!-- Opion move first -->
    <string name="game_option_move_first_black">Noir</string>
    <string name="game_option_move_first_white">Blanc</string>

    <!-- Opion AI level -->
    <string name="game_option_ai_level_1">1</string>
    <string name="game_option_ai_level_2">2</string>
    <string name="game_option_ai_level_3">3</string>
    <string name="game_option_ai_level_4">4</string>
    <string name="game_option_ai_level_5">5</string>
    <string name="game_option_ai_level_6">6</string>
    <string name="game_option_ai_level_7">7</string>
    <string name="game_option_ai_level_8">8</string>
    <string name="game_option_ai_level_9">9</string>
    <string name="game_option_ai_level_10">10</string>
    <string name="game_option_ai_level_11">11</string>
    <string name="game_option_ai_level_12">12</string>

    <!-- Opion AI max time eval in second -->
    <string name="game_option_ai_max_time_eval_1">1</string>
    <string name="game_option_ai_max_time_eval_2">2</string>
    <string name="game_option_ai_max_time_eval_3">3</string>
    <string name="game_option_ai_max_time_eval_4">4</string>
    <string name="game_option_ai_max_time_eval_5">5</string>
    <string name="game_option_ai_max_time_eval_6">6</string>
    <string name="game_option_ai_max_time_eval_7">7</string>
    <string name="game_option_ai_max_time_eval_8">8</string>
    <string name="game_option_ai_max_time_eval_9">9</string>
    <string name="game_option_ai_max_time_eval_10">10</string>

    <!-- Opion AI ponder -->
    <string name="game_option_ai_ponder_yes">Oui</string>
    <string name="game_option_ai_ponder_no">Non</string>

    <!-- Opion Buttons -->
    <string name="game_option_play">Jouer</string>
    <string name="game_option_resume">Reprendre</string>
    <string name="game_option_re_edit">Re-éditer</string>

    <!-- Save games -->
    <string name="saved_games_breadcrumb_home">Accueil</string>
    <string name="saved_games_new_folder">Nouveau dossier</string>
    <string name="saved_games_move_items">Déplacer</string>
    <string name="saved_games_move_items_here">Déplacer ici</string>
    <string name="saved_games_cancel">Annuler</string>
    <string name="saved_games_remove">Supprimer</string>
    <string name="saved_games_edit">Modifier</string>
    <string name="saved_games_save_here">Sauvegarder ici</string>
    <string name="saved_games_continue_game">Continuer</string>
    <string name="saved_games_game_name_placeholder">Nom de la partie ...</string>
    <string name="saved_games_game_name_empty_msg">Veuillez renseigner le nom de la partie</string>
    <string name="saved_games_edit_save">Sauvegarder</string>
    <string name="saved_games_edit_folder_name">Nom du dossier ...</string>

    <!-- Setting -->
    <string name="setting_theme">Theme</string>
    <string name="setting_sound">Son</string>
    <string name="setting_language">Langue</string>

</resources>