<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:padding="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <android.widget.Button
            android:id="@+id/home_play"
            style="@style/HomeButton"
            android:text="@string/home_play"
            android:onClick="launchOptionActivity" />

        <android.widget.Button
            android:id="@+id/home_edit"
            style="@style/HomeButton"
            android:text="@string/home_edit"
            android:onClick="launchEditionActivity" />

        <android.widget.Button
            android:id="@+id/home_load_save"
            style="@style/HomeButton"
            android:text="@string/home_load_save"
            android:onClick="launchSavedGamesActivity" />

        <android.widget.Button
            android:id="@+id/home_setting"
            style="@style/HomeButton"
            android:text="@string/home_setting"
            android:onClick="launchThemeActivity" />

    </LinearLayout>

</RelativeLayout>