<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".OptionGameModeActivity">

    <RelativeLayout
        style="@style/PopupContainer">

        <androidx.cardview.widget.CardView
            style="@style/PopupBodyContainer">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/PopupBg"
                    android:layout_alignLeft="@id/option_game_mode_list"
                    android:layout_alignTop="@+id/option_game_mode_list"
                    android:layout_alignRight="@id/option_game_mode_list"
                    android:layout_alignBottom="@id/option_game_mode_list"/>

                <ImageView style="@style/PopupHeader"/>

                <LinearLayout
                    android:id="@+id/option_game_mode_list"
                    style="@style/PopupBody"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/option_game_mode_riatra"
                        style="@style/OptionsPopupItemContainer"
                        android:onClick="setGameModeRiatra">

                        <LinearLayout style="@style/OptionsPopupItemContainerLayout">

                            <ImageView
                                style="@style/OptionsPopupItemImage"
                                android:src="@drawable/option_game_mode_riatra_ic" />

                            <TextView
                                style="@style/PopupItemTitle"
                                android:text="@string/game_option_mode_riatra" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/option_game_mode_vela_black"
                        style="@style/OptionsPopupItemContainer"
                        android:onClick="setGameModeVelaBlack">

                        <LinearLayout style="@style/OptionsPopupItemContainerLayout">

                            <ImageView
                                style="@style/OptionsPopupItemImage"
                                android:src="@drawable/option_game_mode_vela_black_ic" />

                            <TextView
                                style="@style/PopupItemTitle"
                                android:text="@string/game_option_mode_vela_black" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/option_game_mode_vela_white"
                        style="@style/OptionsPopupItemContainer"
                        android:onClick="setGameModeVelaWhite">

                        <LinearLayout style="@style/OptionsPopupItemContainerLayout">

                            <ImageView
                                style="@style/OptionsPopupItemImage"
                                android:src="@drawable/option_game_mode_vela_white_ic" />

                            <TextView
                                style="@style/PopupItemTitle"
                                android:text="@string/game_option_mode_vela_white" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <ImageView
        style="@style/PopupHeaderImage"
        android:src="@drawable/option_game_mode_popup_ic" />

</RelativeLayout>