<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <com.tambyy.fanoronaakalana.graphics.customview.SquaredFromHeightCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:backgroundTint="#0000"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:onClick="launchThemeActivity">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/setting_theme_bg">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="7dp"
                        android:gravity="center"
                        android:text="@string/setting_theme"
                        android:textColor="#FFF"
                        android:textStyle="bold" />

                </RelativeLayout>

            </com.tambyy.fanoronaakalana.graphics.customview.SquaredFromHeightCardView>

            <com.tambyy.fanoronaakalana.graphics.customview.SquaredFromHeightCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:backgroundTint="#0000"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:onClick="launchSoundActivity">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/setting_sound_bg">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="7dp"
                        android:gravity="center"
                        android:text="@string/setting_sound"
                        android:textColor="#FFF"
                        android:textStyle="bold" />

                </RelativeLayout>

            </com.tambyy.fanoronaakalana.graphics.customview.SquaredFromHeightCardView>

            <com.tambyy.fanoronaakalana.graphics.customview.SquaredFromHeightCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:backgroundTint="#0000"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:onClick="launchLocaleActivity">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/setting_language_bg">

                    <TextView
                        android:id="@+id/option_first_move_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="7dp"
                        android:gravity="center"
                        android:text="@string/setting_language"
                        android:textColor="#FFF"
                        android:textStyle="bold" />

                </RelativeLayout>

            </com.tambyy.fanoronaakalana.graphics.customview.SquaredFromHeightCardView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>