<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".OptionPlayAgainstActivity">

    <RelativeLayout
        style="@style/PopupContainer">

        <androidx.cardview.widget.CardView
            style="@style/PopupBodyContainer">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/PopupBg"
                    android:layout_alignTop="@+id/option_play_against_list"
                    android:layout_alignBottom="@id/option_play_against_list"
                    android:layout_alignLeft="@id/option_play_against_list"
                    android:layout_alignRight="@id/option_play_against_list" />

                <ImageView style="@style/PopupHeader"/>

                <LinearLayout
                    android:id="@+id/option_play_against_list"
                    style="@style/PopupBody"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/option_play_against_human"
                        style="@style/OptionsPopupItemContainer"
                        android:onClick="setPlayAgainstHuman">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="0dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:src="@drawable/option_play_against_humain_ic" />

                            <TextView
                                style="@style/PopupItemTitle"
                                android:text="@string/game_option_against_human"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/option_play_against_ai_black"
                        style="@style/OptionsPopupItemContainer"
                        android:onClick="setPlayAgainstAiBlack">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="0dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:src="@drawable/option_play_against_ai_black_ic" />

                            <TextView
                                style="@style/PopupItemTitle"
                                android:text="@string/game_option_against_ai_black"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/option_play_against_ai_white"
                        style="@style/OptionsPopupItemContainer"
                        android:onClick="setPlayAgainstAiWhite">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="0dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:src="@drawable/option_play_against_ai_white_ic" />

                            <TextView
                                style="@style/PopupItemTitle"
                                android:text="@string/game_option_against_ai_white"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <ImageView
        style="@style/PopupHeaderImage"
        android:src="@drawable/option_play_against_popup_ic" />

</RelativeLayout>